# repolytics

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: repolytics_daily.py
dashboard/: app.py
dashboard/lib/: data.py  health.py  queries.py
dashboard/views/: _components.py  contributors.py  overview.py  popularity.py  releases.py  velocity.py
dbt/: dbt_project.yml  package-lock.yml  profiles.yml
dbt/macros/: date_key.sql  generate_schema_name.sql  scd2_repository_join.sql  source_or_empty.sql
dbt/models/marts/: _exposures.yml  _marts__models.yml  bridge_issue_labels.sql  dim_contributors.sql  dim_dates.sql  dim_labels.sql  dim_repositories.sql  fct_commits.sql  fct_contributor_activity_monthly.sql  fct_daily_downloads.sql  fct_issues.sql  fct_pull_requests.sql  fct_releases.sql  fct_repository_metrics.sql
dbt/models/staging/github/: _github__models.yml  _github__sources.yml  stg_github__commits.sql  stg_github__issue_labels.sql  stg_github__issues.sql  stg_github__pr_labels.sql  stg_github__pull_requests.sql  stg_github__releases.sql  stg_github__repositories.sql
dbt/models/staging/pypi/: _pypi__models.yml  _pypi__sources.yml  stg_pypi__downloads.sql
dbt/seeds/: _seeds.yml  projects.csv
dbt/snapshots/: snap_repositories.sql
dbt/tests/: assert_dim_date_completeness.sql
src/repolytics/: config.py
src/repolytics/ingestion/: _http.py  _meta.py  github_client.py  github_source.py  pipeline.py  pypi_client.py  pypi_source.py  watermarks.py  writer.py
src/repolytics/loading/: raw_loader.py
tests/: conftest.py
tests/dag/: test_dags.py
tests/fixtures/github_responses/: commits.json  issues.json  pulls.json  releases.json  repository.json
tests/fixtures/pypi_responses/: downloads.json  overall.json  recent.json
tests/integration/: test_github_incremental.py  test_pipeline.py  test_raw_contract.py  test_raw_loader.py
tests/support/: warehouse.py
tests/unit/: _clients.py  test_config.py  test_github_client.py  test_meta.py  test_pipeline.py  test_pypi_client.py  test_pypi_source.py  test_watermarks.py  test_writer.py
