[project]
name = "repolytics"
version = "0.1.0"
description = "End-to-end ELT pipeline for open source project analytics (GitHub + PyPI -> DuckDB -> dbt -> Airflow)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.28.0",
    "duckdb>=1.5.3",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dbt = [
    "dbt-core>=1.11.11",
    "dbt-duckdb>=1.10.1",
]
orchestration = [
    "astronomer-cosmos>=1.14.2",
]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "responses>=0.26.1",
    "ruff>=0.15.17",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PTH", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true

[tool.coverage.run]
source = ["repolytics"]
branch = true
